prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/delete_forbid_pragma.diag.txt
ERROR: Usage of 'delete' operator if forbidden. Use 'o.rawdelete("key")' instead
testData/diagnostics/delete_forbid_pragma.nut.txt:22:0

delete t.d // EXPECTED
^-----


